--- a/style.css
+++ b/style.css
@@ -2,16 +2,20 @@
     margin: 0;
     padding: 0;
     color:seashell;
-    background-color: black;
-    opacity: 0.9;
     text-align: center;
     font-family: Helvetica;
 
 }
+html {
+    background-color: black;
+}
+
 body {
     margin: auto;
     font-size: 22px;
     max-width: 1200px;
+    background-color: black;
+    opacity: 0.9;
 }
 
 header {
@@ -58,7 +62,7 @@ header a {
 
 .month {
     align-items: center;
-    width: 1000px;
+    max-width: 1200px;
     margin: auto;
     padding-bottom: 20px;
 }
@@ -69,10 +73,12 @@ header a {
 }
 
 #image {
-    width: 1000px;
-    display: flex;
-    flex-wrap: wrap;
+    max-width: 1200px;
+    height: auto;
+    display: inline-flex;
+    flex-flow: wrap;
     justify-content: center;
+    align-content: center;
 }
 
 #image img {
@@ -82,24 +88,37 @@ header a {
 }
 
 .location {
-    width: 90%;
+    max-width: 1200px;
     height: 500px;
     margin: auto;
     padding-top: 20px;
     background-image: url(https://content.codecademy.com/courses/freelance-1/unit-4/img-locations-background.jpg);
-    background-position: center;
+    background-position: center; 
+    justify-content: center;
+    align-content: center;
 }
 
 .locbox{
     margin: auto;
-    display: flex;
+    max-width: 1200px;
+    display: inline-flex;
+    flex-wrap: wrap;
+    justify-content: center;
+
 }
 
 #adress {
     width: 300px;
-    margin: 20px;
-    justify-content: space-between;
-    padding: 5%;
+    margin: 10px;
+    padding-top: 3px;
+    background-color: black;
+    opacity: 2;
+    justify-content: center;
+    align-content: center;
+}
+
+#adress h3, #adress h4 {
+    max-width: 300px;
 }
 
 #logo {
