--- a/style.css
+++ b/style.css
@@ -15,7 +15,8 @@ body {
     font-size: 22px;
     max-width: 1200px;
     background-color: black;
-    opacity: 0.9;
+    opacity: 0,9;
+    color: seashell;
 }
 
 header {
@@ -27,27 +28,30 @@ header {
     align-items: center;
     justify-content: space-between;
     width: 100%;
-    margin-bottom: 20px;
-    position: fixed;
+    margin-bottom: 1px;
     z-index: 1;
-    opacity: 1;
+    opacity: 0.9;
 }
 
 header a {
     margin: 10px;
 }
 
+footer {
+    display: flex;
+    padding-left: 20px;
+}
 .nav {
     position: relative;
     color: seashell;
 }
 
 .main {
-    padding-top: 80px;
+    margin-top: 5px;
 }
 
 .mission {
-    width: 90%;
+    width: 100%;
     height: 700px;
     width: 1200;
     display: flex;
@@ -58,6 +62,14 @@ header a {
     align-items: center;
     background-image: url("https://s3.amazonaws.com/codecademy-content/courses/freelance-1/unit-4/img-mission-background.jpg");
     background-position: center;
+    padding-top: 10px;
+    background-repeat: no-repeat;
+}
+
+.mission h2, .mission h4 {
+    background-color: black;
+    width: 100%;
+    opacity: 0.7;
 }
 
 .month {
@@ -72,30 +84,17 @@ header a {
     width: 100%;
 }
 
-#image {
-    max-width: 1200px;
-    height: auto;
-    display: inline-flex;
-    flex-flow: wrap;
-    justify-content: center;
-    align-content: center;
-}
-
-#image img {
-    height: 200px;
-    width: 300px;
-    margin: 10px;
-}
-
 .location {
     max-width: 1200px;
-    height: 500px;
+    min-height: 350px;
     margin: auto;
-    padding-top: 20px;
     background-image: url(https://content.codecademy.com/courses/freelance-1/unit-4/img-locations-background.jpg);
     background-position: center; 
     justify-content: center;
+    display: flexbox;
     align-content: center;
+    padding-top: 50px;
+    padding-bottom: 50px;
 }
 
 .locbox{
@@ -107,12 +106,26 @@ header a {
 
 }
 
+.contact {
+    padding: 20px;
+    max-width: 1200px;
+    height: 100px;
+    display: inline-flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: space-between;
+}
+
+.contact h1 {
+    padding-bottom: 20px;
+}
+
 #adress {
     width: 300px;
     margin: 10px;
     padding-top: 3px;
     background-color: black;
-    opacity: 2;
+    opacity: 0.7;
     justify-content: center;
     align-content: center;
 }
@@ -131,7 +144,20 @@ header a {
 
 #featuredtea {
     margin: auto;
-    padding-top: 20px;
-        
+    padding-top: 20px;        
 }
 
+#image {
+    max-width: 1200px;
+    height: auto;
+    display: inline-flex;
+    flex-flow: wrap;
+    justify-content: center;
+    align-content: center;
+}
+
+#image img {
+    height: 200px;
+    width: 300px;
+    margin: 10px;
+}
